v1.5
    - Updates to addon.xml
        - Description updated
        - Disclaimer updated
        - Provider updated
    - Added dom_parser utils module
    - Moved the following to settings.xml
        - lastfm_api_key
        - lastfm_secret
        - message_xml_url
        - root_xml
        - search_db_location
        - tmdb_api_key
        - trakt_api_client_id
        - trakt_api_client_secret
        - tvdb_api_key
    - Added youtu.be and embed url support to sources::youtube_resolve

v1.4
    - Updated settings.xml
    - Updated strings.po
    - Updated networks.xml and fixed genre_tv.xml

v1.1
    - Based on bob 1.0.12
    - Added "plugin" system, see plugin.py
    - Added most strings to strings.po
    - Added hebrew translation (thanks Eng2Heb)
    - Added Search and Search db generation script
    - Loads of bugfixes

v1.0
    - Release 1.0.0 initial release
    - based on bob 1.0.1