@@ -15,6 +15,8 @@ v1.5
         - trakt_api_client_secret
         - tvdb_api_key
     - Added youtu.be and embed url support to sources::youtube_resolve
+    - Created working service.py so you can update API keys and root xml
+        Read service.py header for details
 
 v1.4
     - Updated settings.xml
